--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Color picker",
+  "name": "Min color-picker",
   "description": "The best color picker in the market.",
   "version": "0.0.1",
   "manifest_version": 3,
