--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["./contentScript.js"]
+      "js": ["./contentScript.js","./html2canvas.min.js"]
     }
   ],
   "permissions": ["tabs", "storage", "scripting", "downloads", "privacy"],
